--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; background: linear-gradient(135deg, #e0f2fe 0%, #cffafe 100%); }
@@ -55,7 +56,126 @@
     <div id="root"></div>
     
     <script type="text/babel">
-        const { useState, useEffect, useMemo } = React;
+        const { useState, useEffect, useMemo, useRef } = React;
+
+        const TideChart = ({ data, threshold, title }) => {
+            const canvasRef = useRef(null);
+            const chartRef = useRef(null);
+
+            useEffect(() => {
+                if (!canvasRef.current || data.length === 0) return;
+
+                const ctx = canvasRef.current.getContext('2d');
+
+                // 既存のチャートを破棄
+                if (chartRef.current) {
+                    chartRef.current.destroy();
+                }
+
+                // データを準備
+                const labels = data.map(d => {
+                    const date = new Date(d.datetime);
+                    return date.toLocaleString('ja-JP', { 
+                        month: 'numeric', 
+                        day: 'numeric', 
+                        hour: '2-digit', 
+                        minute: '2-digit' 
+                    });
+                });
+                const tideValues = data.map(d => d.tide);
+
+                // グラデーション作成
+                const gradient = ctx.createLinearGradient(0, 0, 0, 400);
+                gradient.addColorStop(0, 'rgba(59, 130, 246, 0.5)');
+                gradient.addColorStop(1, 'rgba(59, 130, 246, 0.1)');
+
+                // チャート作成
+                chartRef.current = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: '潮位 (cm)',
+                            data: tideValues,
+                            borderColor: 'rgb(59, 130, 246)',
+                            backgroundColor: gradient,
+                            borderWidth: 2,
+                            fill: true,
+                            tension: 0.4,
+                            pointRadius: 0,
+                            pointHoverRadius: 5
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        interaction: {
+                            intersect: false,
+                            mode: 'index'
+                        },
+                        plugins: {
+                            legend: {
+                                display: true,
+                                position: 'top'
+                            },
+                            tooltip: {
+                                callbacks: {
+                                    label: function(context) {
+                                        return '潮位: ' + context.parsed.y + ' cm';
+                                    }
+                                }
+                            },
+                            annotation: {
+                                annotations: {
+                                    threshold: {
+                                        type: 'line',
+                                        yMin: threshold,
+                                        yMax: threshold,
+                                        borderColor: 'rgb(239, 68, 68)',
+                                        borderWidth: 2,
+                                        borderDash: [5, 5],
+                                        label: {
+                                            content: `閾値 ${threshold}cm`,
+                                            display: true,
+                                            position: 'end'
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        scales: {
+                            x: {
+                                ticks: {
+                                    maxRotation: 45,
+                                    minRotation: 45,
+                                    autoSkip: true,
+                                    maxTicksLimit: 20
+                                }
+                            },
+                            y: {
+                                beginAtZero: true,
+                                title: {
+                                    display: true,
+                                    text: '潮位 (cm)'
+                                }
+                            }
+                        }
+                    }
+                });
+
+                return () => {
+                    if (chartRef.current) {
+                        chartRef.current.destroy();
+                    }
+                };
+            }, [data, threshold]);
+
+            return (
+                <div style={{ position: 'relative', height: '400px', width: '100%' }}>
+                    <canvas ref={canvasRef}></canvas>
+                </div>
+            );
+        };
 
         const TidalFlatSystem = () => {
             const [threshold, setThreshold] = useState(120);
@@ -261,6 +381,17 @@
                                 <span>予測データ更新: <strong style={{color: '#059669'}}>{formatUpdateTime(lastUpdate.prediction)}</strong></span>
                             </div>
                         </div>
+                    </div>
+
+                    <div className="card">
+                        <h2 style={{fontSize: '1.25rem', fontWeight: 'bold', marginBottom: '1rem'}}>
+                            {activeTab === 'prediction' ? '📊 7日間潮位予測グラフ' : '📈 実測潮位グラフ（直近24時間）'}
+                        </h2>
+                        <TideChart 
+                            data={activeTab === 'observed' ? observedData.slice(-288) : predictionData}
+                            threshold={threshold}
+                            title={activeTab === 'prediction' ? '7日間予測' : '実測値'}
+                        />
                     </div>
 
                     <div className="card">
